--- a/app/src/main/res/layout/fragment_item_list.xml
+++ b/app/src/main/res/layout/fragment_item_list.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical" >
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -18,8 +18,18 @@
     android:id="@+id/list"
     android:name="com.acme.lavah.ui.ItemFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_weight="3"
+    android:layout_height="0dp"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     tools:listitem="@layout/fragment_item" />
+
+    <ImageView
+        android:id="@+id/img2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".4"
+        android:background="@color/white"
+        app:srcCompat="@drawable/ic_launcher_foreground"
+        />
 </LinearLayout>
