--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -29,14 +29,14 @@
         android:background="@color/white"
         app:srcCompat="@drawable/ic_launcher_foreground"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="54dp" />
+        tools:layout_editor_absoluteY="logo_margin" />
 
     <ImageView
         android:id="@+id/imageView1"
-        android:background="@color/pink"
         android:layout_width="match_parent"
         android:layout_height="380dp"
-        android:layout_marginTop="172dp"
+        android:layout_marginTop="160dp"
+        android:background="@color/pink"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_launcher_foreground"
         tools:layout_editor_absoluteX="0dp" />
